--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.pth filter=lfs diff=lfs merge=lfs -text
 models/*.pth filter=lfs diff=lfs merge=lfs -text
+venv/* filter=lfs diff=lfs merge=lfs -text
